2005-07-25 14:47 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) added a block that works like
	gridAdaptLongShort to the gridCOST_CNST_VALID path (sequential only).

2005-07-25 14:45 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseEdgeToAnything) made public (non
	static) to be called from gridmpi adapt.

2005-07-25 10:06 Mike Park  <mike.park@nasa.gov>

	* src/gridfiller.c (gridSavePart) Reset the uv values of the
	disjoint patches after call to CADTopo_FlushPatches to avoid
	renumbering and projection issues. THIS SHOULD BE LOOKED AT
	AGAIN after Bill Jones finishes with the GeoSDK restart node
	ordering logic.

2005-07-25 09:02 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmooth) called free(cost) to prevent memory leak.

2005-07-25 08:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) extended it to split edges
	on the interior of faces (but not splitting geom edges yet). it
	calls gridSmoothNodeVolumeUVSimplex to get the new uv value.

2005-07-22 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolumeUVSimplex) added to help get
	surface edges to split.

2005-07-22 15:22 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) replaced the
	gridCollapseEdge undo call with direct logic that will not fail if
	grid is nearly bad.

2005-07-22 13:43 Mike Park  <mike.park@nasa.gov>

	* src/grid.h (struct Grid) increased size of grid->equ array to
	avoid writing past the end of the array when calling gridEquator.

2005-07-21 16:53 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmooth) only hit nodes once for speed.

2005-07-21 13:27 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) added to split an interior
	edge by optimizing volume (minimum Jacobian).
	* src/gridinsert.c (gridAdaptLongShort) try gridSplitEdgeForce to split.

2005-07-21 10:11 Mike Park  <mike.park@nasa.gov>
