@@ -1,3 +1,9 @@
+2005-07-26 08:24 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridAdaptLongShort) return NULL on first edge
+	that will not gridSplitEdgeForce, to debug/improve gridSplitEdgeForce.
+	* src/unit_main.c (main) exit if gridAdaptLongShort NULL.
+
 2005-07-25 14:47 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridmpi.c (gridParallelAdapt) added a block that works like
